Fix alignment and spacing

--- a/src/layouts/layout.scss
+++ b/src/layouts/layout.scss
@@ -89,7 +89,7 @@ a {
 
 // Utilities
 .text-center {
-	text-align: center;
+	text-align: center !important;
 }
 
 .text-left {
